--- a/career-improvements/devops/kubernetes/kubernetes-pods-services-configmap/portal/statefulset-news-system.yaml
+++ b/career-improvements/devops/kubernetes/kubernetes-pods-services-configmap/portal/statefulset-news-system.yaml
@@ -1,31 +1,28 @@
 apiVersion: apps/v1
-kind: Deployment
+kind: StatefulSet
 metadata:
-  name: news-portal-deployment
-# spec:
-  # containers:
-  #   - name: news-portal-container
-  #     image: aluracursos/portal-noticias:1
-  #     ports:
-  #       - containerPort: 80
-  #     envFrom:
-  #       - configMapRef:
-  #           name: news-portal-configmap
+  name: stateful-news-system
 spec:
+  replicas: 1
   template:
     metadata:
-      name: news-portal
-      labels: 
-        app: news-portal
+      name: news-system-data
+      labels:
+        app: news-system-data
     spec:
       containers:
-        - name: news-portal-container
-          image: aluracursos/portal-noticias:1
+        - name: system-news-containers
+          image: aluracursos/sistema-noticias:1
           ports:
             - containerPort: 80
           envFrom:
             - configMapRef:
-                name: news-portal-configmap
+                name: system-configmap
+          volumeMounts:
+            - name: images
+              mountPath: /var/www/html/uploads
+            - name: session
+              mountPath: /tmp
           # Tell us if the application is still alive
           # And when it should be restarted
           livenessProbe:
@@ -40,7 +37,7 @@ spec:
             initialDelaySeconds: 20
           readinessProbe:
             httpGet:
-              path: /
+              path: /inserir_noticias.php
               port: 80
             # Frequency
             periodSeconds: 10
@@ -48,12 +45,14 @@ spec:
             failureThreshold: 5
             # Wait for the initial container running
             initialDelaySeconds: 3
-  replicas: 3
-  # Kubernetes doesn't know which template it should follow
-  # Even being in the same file like we have here
-  # so we need to define the selector as well
-  # to have the same name as defined before
-  # eg.: news-portal (label defined on top)
+      volumes:
+        - name: images
+          persistentVolumeClaim:
+            claimName: image-pvc
+        - name: session
+          persistentVolumeClaim:
+            claimName: session-pvc
   selector:
     matchLabels:
-      app: news-portal
+      app: news-system-data
+  serviceName: svc-system-data
