[DevOps][Kubernetes] Add meaningful info to volumes

--- a/career-improvements/devops/kubernetes/kubernetes-pods-services-configmap/portal/fake-pvc-disk.yaml
+++ b/career-improvements/devops/kubernetes/kubernetes-pods-services-configmap/portal/fake-pvc-disk.yaml
@@ -8,4 +8,6 @@ spec:
   resources:
     requests:
       storage: 10Gi
+  # storageClassName: local-storage / when we need to map our local file inside at the container (for development)
+  # storageClassName: local-storage-db / when we need to map a database
   storageClassName: standard
