--- a/career-improvements/devops/kubernetes/kubernetes-pods-services-configmap/portal/example-host-pod-volume.yaml
+++ b/career-improvements/devops/kubernetes/kubernetes-pods-services-configmap/portal/example-host-pod-volume.yaml
@@ -23,3 +23,12 @@ spec:
         # path: /C/Users/Carlos/repository/study/career-improvements/devops/kubernetes/kubernetes-pods-services-configmap/portal/volume
         path: /Users/carlohcs/Documents/repository/study/career-improvements/devops/kubernetes/kubernetes-pods-services-configmap/portal/volume
         type: Directory
+      # https://kubernetes.io/docs/tasks/administer-cluster/change-pv-reclaim-policy/
+      # Retain | Recycle | Delete
+      # PersistentVolumes can have various reclaim policies, including "Retain", "Recycle", and "Delete". 
+      # For dynamically provisioned PersistentVolumes, the default reclaim policy is "Delete". 
+      # This means that a dynamically provisioned volume is automatically deleted when a user deletes the corresponding PersistentVolumeClaim. 
+      # This automatic behavior might be inappropriate if the volume contains precious data. In that case, it is more appropriate to use the "Retain" policy. 
+      # With the "Retain" policy, if a user deletes a PersistentVolumeClaim, the corresponding PersistentVolume will not be deleted. 
+      # Instead, it is moved to the Released phase, where all of its data can be manually recovered.
+      persistentVolumeClaimPolicy: Retain
