--- a/career-improvements/devops/kubernetes/03-alura-kubernetes-pratica-helm-cloud/project/k8s/config-map-voll-med.yaml
+++ b/career-improvements/devops/kubernetes/03-alura-kubernetes-pratica-helm-cloud/project/k8s/config-map-voll-med.yaml
@@ -5,3 +5,5 @@ metadata:
 data:
   DB_HOST: svc-mysql-vollmed
   DB_DATABASE: testemed
+  REDIS_HOST: my-release-redis-master.default.svc.cluster.local
+
